k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver-test
  labels:
    app: goserver-test
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 2
  template:
    metadata:
      name: "goserver"
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "taisso/hello-go:v4"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 1
            successThreshold: 1


          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
            # readOnly: true
          
      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
