k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: "goserver"
  # type: ClusterIP
  # ports:
  # - name: goserver-service
  #   port: 80
  #   targetPort: 8080
  #   protocol: TCP
  type: LoadBalancer
  ports:
  - name: goserver-service
    port: 80
    targetPort: 8080
    protocol: TCP
    # nodePort: 30001
